# Vibeathon_new

./: .gitignore  .replit  PYTHON_BACKEND.md  README.md  agentverse.db  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  start_python_backend.sh
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-You-are-Replit-AI-Build-a-production-ready-full-stack-web-app-called-Agentverse-Study-Buddy-that-d-1762543802320_1762543802321.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: app-sidebar.tsx  theme-provider.tsx
client/src/lib/: api.ts  auth.ts  keyboard.ts  queryClient.ts
client/src/pages/: Dashboard.tsx  Flashcards.tsx  Ingest.tsx  Learn.tsx  Login.tsx  MockTest.tsx  Placement.tsx  Practice.tsx
pdfExtraction/: main.py  requirements.txt
python_backend/: __init__.py  auth.py  config.py  database.py  main.py  models.py  rag.py
python_backend/agents/: __init__.py  base.py  evaluator.py  orchestrator.py  planner.py  quizgen.py  teacher.py
python_backend/services/: __init__.py  flashcards.py  ingest.py  judge0.py  sm2.py
server/: routes.ts  seed.ts  storage.ts
shared/: schema.ts
